flux/infrastructure/network-policies/talos-worker-trusted-1/trusted-policies.yaml
---
# Trusted Worker Node Policies
# talos-worker-trusted-1

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trusted-network-pods
  namespace: default
spec:
  description: "Allow pods on Trusted worker to communicate with each other"
  nodeSelector:
    kubernetes.io/hostname: talos-worker-trusted-1
  endpointSelector:
    matchLabels:
      network-zone: trusted
  ingress:
  - fromEndpoints:
    - matchLabels:
        network-zone: trusted
  # Allow from Traefik (DMZ) for ingress
  - fromNamespaces:
    - name: kube-system
    fromLabelSelector:
      matchLabels:
        app: traefik
  # Metrics from monitoring
  - fromNamespaces:
    - name: monitoring
    fromLabelSelector:
      matchLabels:
        app: prometheus
    toPorts:
    - ports:
      - port: "9100"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        network-zone: trusted
  - toNamespaces:
    - name: kube-system
  - toFQDNs:
    - matchName: "*.svc.cluster.local"

---
# Host firewall for Trusted worker
# NOTE: Base rules are in host-firewall-base.yaml
# This adds Trusted-worker-specific rules only
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-firewall-trusted-worker
spec:
  description: "Trusted worker specific host firewall rules"
  nodeSelector:
    kubernetes.io/hostname: talos-worker-trusted-1
  ingress:
  # Allow access from home LAN (Trusted zone has home network access)
  - fromCIDR:
    - 192.168.123.0/24
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
  # Allow metrics from Prometheus pods
  - fromEndpoints:
    - matchLabels:
        app: prometheus
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
      - port: "9100"
        protocol: TCP
  egress:
  # Can reach home LAN (this is what makes it "trusted")
  - toCIDR:
    - 192.168.123.0/24
